--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -7,8 +7,8 @@
     tools:context=".CompanyInformation">
 
     <ScrollView
-        android:layout_width="353dp"
-        android:layout_height="687dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,8 @@
                 android:text="@string/label_input_sales"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"/>
 
             <EditText
                 android:id="@+id/input_sales"
@@ -39,9 +40,10 @@
                 android:backgroundTint="@color/blue_app"
                 android:ems="10"
                 android:hint="@string/placeholder_input_sales"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginLeft="10sp"/>
 
             <TextView
                 android:id="@+id/label_credit30"
@@ -50,7 +52,8 @@
                 android:text="@string/label_input_credit_sales30"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"/>
 
             <EditText
                 android:id="@+id/input_credit30"
@@ -60,9 +63,10 @@
                 android:backgroundTint="@color/blue_app"
                 android:ems="10"
                 android:hint="@string/placeholder_credit_sales30"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginLeft="10sp"/>
 
             <TextView
                 android:id="@+id/label_credit60"
@@ -71,7 +75,8 @@
                 android:text="@string/label_input_credit_sales60"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"/>
 
             <EditText
                 android:id="@+id/input_credit60"
@@ -81,9 +86,10 @@
                 android:backgroundTint="@color/blue_app"
                 android:ems="10"
                 android:hint="@string/placeholder_credit_sales60"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginLeft="10sp"/>
 
             <TextView
                 android:id="@+id/label_about"
@@ -92,7 +98,8 @@
                 android:text="@string/label_input_about_sales"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"/>
 
             <EditText
                 android:id="@+id/input_about"
@@ -102,9 +109,10 @@
                 android:backgroundTint="@color/blue_app"
                 android:ems="10"
                 android:hint="@string/placeholder_about_sales"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginLeft="10sp"/>
 
             <TextView
                 android:id="@+id/label_bad_debt"
@@ -113,7 +121,8 @@
                 android:text="@string/label_input_bad_debt"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"/>
 
             <EditText
                 android:id="@+id/input_bad_debt"
@@ -123,9 +132,10 @@
                 android:backgroundTint="@color/blue_app"
                 android:ems="10"
                 android:hint="@string/placeholder_bad_debt"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginLeft="10sp"/>
 
             <TextView
                 android:id="@+id/label_interest"
@@ -134,7 +144,8 @@
                 android:text="@string/label_input_interest"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"/>
 
             <EditText
                 android:id="@+id/input_interest"
@@ -144,23 +155,28 @@
                 android:backgroundTint="@color/blue_app"
                 android:ems="10"
                 android:hint="@string/placeholder_interest"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginLeft="10sp"/>
 
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_app"
-                android:text="@string/btn_register" />
+                android:text="@string/btn_register"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"/>
 
             <Button
                 android:id="@+id/btn_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/red_app"
-                android:text="@string/btn_cancel" />
+                android:text="@string/btn_cancel"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"/>
 
         </LinearLayout>
     </ScrollView>
