--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="red_app">#DD3333</color>
-    <color name="blue_app">#003b72</color>
+    <color name="red_app">#CD0101</color>
+    <color name="blue_app">#00509A</color>
 </resources>
