--- a/app/src/main/res/layout/activity_spending_interest.xml
+++ b/app/src/main/res/layout/activity_spending_interest.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CommercialInterest">
+    tools:context=".spending_interest">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/title_income_interest"
+            android:text="@string/title_expense_interest"
             android:textColor="@color/blue_app"
             android:textSize="26sp"
             android:textStyle="bold" />
@@ -31,6 +31,73 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title_gross_purchases"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20sp"
+                    android:text="@string/title_gross_purchases"
+                    android:textColor="@color/blue_app"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="10sp" />
+
+                <TextView
+                    android:id="@+id/IGmonth1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginLeft="10sp"/>
+                <TextView
+                    android:id="@+id/IGmonth2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginLeft="10sp"/>
+                <TextView
+                    android:id="@+id/IGmonth3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginLeft="10sp"/>
+                <TextView
+                    android:id="@+id/IGmonth4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginLeft="10sp"/>
+                <TextView
+                    android:id="@+id/IGmonth5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginLeft="10sp"/>
 
                 <TextView
                     android:id="@+id/title_grossIncome30"
@@ -268,7 +335,7 @@
                     android:layout_marginLeft="10sp"/>
 
                 <Button
-                    android:id="@+id/btn_show_SI"
+                    android:id="@+id/btn_show_CI"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
@@ -276,8 +343,8 @@
                     android:layout_marginRight="20sp"
                     android:layout_marginBottom="10sp"
                     android:backgroundTint="@color/blue_app"
-                    android:onClick="viewSpendingInterest"
-                    android:text="@string/show_expense_interes"
+                    android:onClick="viewComercialInterest"
+                    android:text="@string/show_comercial_interes"
                     app:cornerRadius="10sp" />
 
             </LinearLayout>
