--- a/app/src/main/res/layout/activity_ventas.xml
+++ b/app/src/main/res/layout/activity_ventas.xml
@@ -17,11 +17,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado4"
+        app:layout_constraintTop_toBottomOf="@+id/interes"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/contado2"
+        android:id="@+id/treinta"
         android:layout_width="337dp"
         android:layout_height="47dp"
         android:hint="Porcentaje de ventas a credito 30 días"
@@ -32,7 +32,7 @@
         tools:ignore="DuplicateIds,InvalidId" />
 
     <EditText
-        android:id="@+id/contado3"
+        android:id="@+id/sesenta"
         android:layout_width="337dp"
         android:layout_height="47dp"
         android:hint="Porcentaje de ventas a credito 60 días"
@@ -43,7 +43,7 @@
         tools:ignore="DuplicateIds,InvalidId" />
 
     <EditText
-        android:id="@+id/contado4"
+        android:id="@+id/interes"
         android:layout_width="337dp"
         android:layout_height="47dp"
         android:hint="Porcentaje de interes"
@@ -54,7 +54,7 @@
         tools:ignore="DuplicateIds,InvalidId" />
 
     <EditText
-        android:id="@+id/contado5"
+        android:id="@+id/incobra"
         android:layout_width="337dp"
         android:layout_height="47dp"
         android:hint="Porcentaje de incobrabilidad"
@@ -113,7 +113,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado2"
+        app:layout_constraintTop_toBottomOf="@+id/treinta"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -127,11 +127,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado3"
+        app:layout_constraintTop_toBottomOf="@+id/sesenta"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/registra"
         android:layout_width="329dp"
         android:layout_height="51dp"
         android:layout_marginBottom="32dp"
@@ -142,10 +142,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado5" />
+        app:layout_constraintTop_toBottomOf="@+id/incobra" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/cancel"
         android:layout_width="329dp"
         android:layout_height="51dp"
         android:layout_marginBottom="16dp"
@@ -155,7 +155,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado5"
+        app:layout_constraintTop_toBottomOf="@+id/incobra"
         app:layout_constraintVertical_bias="0.8" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/registra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/incobra" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
