--- a/app/src/main/res/layout/activity_compras.xml
+++ b/app/src/main/res/layout/activity_compras.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/porVentas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="% SOBRE VENTAS"
@@ -14,10 +14,11 @@
         android:textSize="16sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="305dp" />
+        tools:layout_editor_absoluteY="305dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/porContTre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="% AL CONTADO 30 DIAS"
@@ -25,7 +26,8 @@
         android:textSize="16sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="191dp" />
+        tools:layout_editor_absoluteY="191dp"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button10"
@@ -39,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado5"
+
         app:layout_constraintVertical_bias="0.8" />
 
     <Button
@@ -52,11 +54,11 @@
         app:backgroundTint="#3F51B5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contado5" />
+        app:layout_constraintStart_toStartOf="parent"/>
+
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/porContado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="% AL CONTADO"
@@ -64,32 +66,37 @@
         android:textSize="16sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="78dp" />
+        tools:layout_editor_absoluteY="78dp"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal"
+        android:id="@+id/cont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
         tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="112dp" />
+        tools:layout_editor_absoluteY="112dp"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal2"
+        android:id="@+id/tren"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
         tools:layout_editor_absoluteX="70dp"
-        tools:layout_editor_absoluteY="232dp" />
+        tools:layout_editor_absoluteY="232dp"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal3"
+        android:id="@+id/vent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
         tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="358dp" />
+        tools:layout_editor_absoluteY="358dp"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
