--- a/app/src/main/res/layout/activity_compras.xml
+++ b/app/src/main/res/layout/activity_compras.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="MissingDefaultResource">
 
     <TextView
         android:id="@+id/porVentas"
@@ -30,7 +31,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/cancel"
         android:layout_width="329dp"
         android:layout_height="51dp"
         android:layout_marginBottom="64dp"
@@ -45,7 +46,7 @@
         app:layout_constraintVertical_bias="0.8" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/register"
         android:layout_width="329dp"
         android:layout_height="51dp"
         android:layout_marginBottom="120dp"
